feat: adiciona função de "ver cliente na imagem"
